# coreutils

./: .gitignore  README.md
src/basename/: main.c
src/cat/: main.c
src/cp/: main.c
src/dirname/: main.c
src/echo/: main.zig
src/head/: main.cpp
src/ls/: Cargo.toml
src/ls/src/: main.rs
src/mkdir/: main.cpp
src/mv/: main.c
src/pwd/: main.c
src/rm/: main.c
src/rmdir/: main.cpp
src/tail/: main.c
src/touch/: main.cpp
src/true-false/false/: main.rs
src/true-false/true/: main.rs
src/uname/: Cargo.toml
src/uname/src/: main.rs
src/whoami/: Cargo.toml
src/whoami/src/: main.rs
